--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -52,3 +52,4 @@ $font-base-size:				13px;
 // $grid-aside-width:			200px;
 // $break-mobile:				768px;
 // $break-small:				1024px;
+// $nav-anim-speed:				250ms;
