--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,4 +1,3 @@
-@import "~roboto-fontface/css/roboto/roboto-fontface.css";
 @import 'variables.scss';
 @import 'hamburger.scss';
 
@@ -14,11 +13,12 @@ body {
 header {
 	color: $header-color;
 	background-color: $header-background;
-	padding: $header-padding;
 	box-shadow: $header-shadow;
 	z-index: $header-zindex;
 	font-size: $header-font-size;
-
+	> div {
+		padding: $header-padding;
+	}
 	.header-title {
 		cursor: pointer;
 		user-select: none;
@@ -28,18 +28,22 @@ header {
 footer {
 	color: $footer-color;
 	background-color: $footer-background;
-	padding: $footer-padding;
 	box-shadow: $footer-shadow;
 	z-index: $footer-zindex;
 	text-align: center;
+	> div {
+		padding: $footer-padding;
+	}
 }
 
 aside {
 	color: $aside-color;
 	background-color: $aside-background;
-	padding: $aside-padding;
 	box-shadow: $aside-shadow;
 	z-index: $aside-zindex;
+	> div {
+		padding: $aside-padding;
+	}
 }
 
 nav {
