--- a/src/scss/hamburger.scss
+++ b/src/scss/hamburger.scss
@@ -49,4 +49,9 @@ button.menu-toggle {
 		span {
 			transform: translate(-50%, 10px) scale(0, 1);
 		}
-	}}
+	}
+	
+	&.hidden {
+		display: none;
+	}
+}
